--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!doctype html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>shyaam</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-</head>
-
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>shyaam</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+  </head>
 <body>
   <header>
     <nav id="header-nav" class="navbar navbar-default">
@@ -23,26 +20,23 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html">
-              <h1>David Chu's China Bistro</h1>
-            </a>
+            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified</span>
             </p>
           </div>
 
-          <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-            data-target="#collapsable-nav" aria-expanded="false">
+          <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
         </div>
-
+        
         <div id="collapsable-nav" class="collapse navbar-collapse">
-          <ul id="nav-list" class="nav navbar-nav navbar-right">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li id="navHomeButton" class="visible-xs active">
               <a href="index.html">
                 <span class="glyphicon glyphicon-home"></span> Home</a>
@@ -61,8 +55,7 @@
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a>
-              <div>* We Deliver</div>
+                <span>410-602-5008</span></a><div>* We Deliver</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -72,8 +65,8 @@
 
   <div id="call-btn" class="visible-xs">
     <a class="btn" href="tel:410-602-5008">
-      <span class="glyphicon glyphicon-earphone"></span>
-      410-602-5008
+    <span class="glyphicon glyphicon-earphone"></span>
+    410-602-5008
     </a>
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
@@ -112,5 +105,4 @@
   <script src="js/ajax-utils.js"></script>
   <script src="js/script.js"></script>
 </body>
-
 </html>
