--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Chu's China Bistro</title>
+    <title>Shyaam kanna</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -144,11 +144,11 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
-              <a href="#">
+              <a href="snippets/categories-title-snippet.html">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Chicken</a>
             </li>
             <li>
-              <a href="#">
+              <a href="snippets/menu-item.html">
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> Beef</a>
             </li>
             <li>
