--- a/snippets/menu-item.html
+++ b/snippets/menu-item.html
@@ -8,8 +8,8 @@
       <div class="menu-item-price">{{price_small}}<span> {{small_portion_name}}</span> {{price_large}} <span>{{large_portion_name}}</span></div>
     </div>
     <div class="menu-item-description col-sm-7">
-      <h3 class="menu-item-title">{{name}}</h3>
-      <p class="menu-item-details">{{description}}</p>
+      <h3 class="menu-item-title">Shyaam</h3>
+      <p class="menu-item-details">A group of company</p>
     </div>
   </div>
   <hr class="visible-xs">
