--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> Beef</a>
             </li>
             <li>
-              <a href="#">
+              <a href="snippets/menu-item-title.html">
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Sushi</a>
             </li>
           </ul><!-- #nav-list -->
